@@ -1,5 +1,8 @@
 2000-10-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/cursor.c (setBusyCursor):
+	* fvwm/conditional.c (AllFunc):
+	(PickFunc):
 	* fvwm/add_window.c (destroy_icon):
 	* fvwm/cursor.c (CursorStyle):
 	* fvwm/functions.c (ExecuteFunction):
